force-app/main/default/objects/Std_Objects_Inc__c/Std_Objects_Inc__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Standard objects incorporated</description>
    <label>Std Objects Incorporated</label>
</CustomObject>