force-app/main/default/objects/Std_Objects_Inc__c/fields/Allow_Insert__c.field-meta.xml
<CustomField>
    <fullName>Allow_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable allow record insert selection options</description>
    <label>Enable Insert Allowed Select Options</label>
    <type>Checkbox</type>
</CustomField>