force-app/main/default/objects/Std_Objects_Inc__c/fields/Email_Message_Object__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Object__c</fullName>
    <description>Email message object name</description>
    <label>Email Message Object</label>
    <length>60</length>
    <type>Text</type>
</CustomField>