force-app/main/default/objects/Std_Objects_Inc__c/fields/Not_Allow_Insert__c.field-meta.xml
<CustomField>
    <fullName>Not_Allow_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable insert not allowed selection options</description>
    <label>Enable Insert Not Allowed Select Option</label>
    <type>Checkbox</type>
</CustomField>